Improve overall rendering system (details in desc)
Changes:
- Add IRenderableObject
- Add Renderer.renderObjects
- Add ProcessState
- Add Camera

Todo:
- Rendering doesn't work when turned away from mesh or when inside mesh
- Flickering for larger (not even that large) meshes
- Current system involves cloning the mesh for every instance of it, desired system is having a reference to the mesh inside of an instance class for example, and applying unique transforms from it instead of from the mesh. This also implies that the whole Rendering Hierarchy has to be reworked, since the RenderToScreen/DrawToScreen currently only sit insde of these Mesh classes

--- a/RasterizationRenderer.csproj
+++ b/RasterizationRenderer.csproj
@@ -15,6 +15,8 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <None Remove="res\Models\text_medium.obj" />
+    <None Remove="res\Models\text_thin.obj" />
     <None Remove="res\Models\torus.obj" />
     <None Remove="res\App\appicon.ico" />
     <None Remove="res\App\bk.PNG" />
@@ -29,6 +31,8 @@
   </ItemGroup>
 
   <ItemGroup>
+    <EmbeddedResource Include="res\Models\text_medium.obj" />
+    <EmbeddedResource Include="res\Models\text_thin.obj" />
     <EmbeddedResource Include="res\Models\torus.obj" />
     <EmbeddedResource Include="res\App\appicon.ico" />
     <EmbeddedResource Include="res\App\bk.PNG" />
