--- a/WeakPerspectiveProjector.csproj
+++ b/WeakPerspectiveProjector.csproj
@@ -5,7 +5,7 @@
     <TargetFramework>net8.0-windows</TargetFramework>
     <UseWindowsForms>true</UseWindowsForms>
     <_SuppressWinFormsTrimError>true</_SuppressWinFormsTrimError>
-    <AssemblyName>rasterization-renderer</AssemblyName>
+    <AssemblyName>weak-perspective-projector</AssemblyName>
     <Nullable>enable</Nullable>
     <PublishAot>true</PublishAot>
     <AllowUnsafeBlocks>true</AllowUnsafeBlocks>
